--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -176,6 +176,7 @@ body {
 
 .contact {
   min-height: 150vh;
+  position: relative;
 }
 
 .contact > h3 {
@@ -195,6 +196,15 @@ body {
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
   bottom: 90px;
+}
+
+.contact .copyright {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  color: #f3dfc1;
 }
 
 .contact > .contact_me {
@@ -229,6 +239,8 @@ body {
 .contact > .contact_me button {
   width: 50%;
   margin: 0 auto;
+  background: #f3dfc1;
+  color: #ff3839;
 }
 
 .cycle-button {
