--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -99,7 +99,7 @@ body {
 
 .my_works {
   background: #f3dfc1;
-  min-height: 350vh;
+  overflow: auto;
 }
 
 .my_works > h2 {
@@ -124,8 +124,8 @@ body {
 .my_works .photos {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(300px, 1fr))[auto-fill];
-      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  -ms-grid-columns: (minmax(400px, 1fr))[auto-fill];
+      grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   grid-column-gap: 20px;
   grid-row-gap: 180px;
 }
@@ -156,8 +156,8 @@ body {
   padding-bottom: 120px;
   background-color: #ff6b6c;
   color: #f3dfc1;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
   position: relative;
 }
 
