--- a/asset/style/style.scss
+++ b/asset/style/style.scss
@@ -6,18 +6,14 @@ html {
 }
 html,
 body {
-  
   padding: 0;
   margin: 0;
   font-family: sans-serif;
   overflow-x: hidden;
-  
 }
 
 section {
   min-height: 100vh;
-
-
 }
 
 a {
@@ -183,8 +179,10 @@ body {
 }
 
 .contact {
-  min-height: 150vh;
+  overflow: hidden;
+
   position: relative;
+
   & > h3 {
     font-size: 1.5em;
     text-align: center;
@@ -201,20 +199,17 @@ body {
       transform: translateX(-50%);
       bottom: 90px;
     }
-
   }
 
   .copyright {
     position: absolute;
-    bottom: 20px;
+    bottom: 0;
     left: 50%;
     transform: translateX(-50%);
     color: #f3dfc1;
-
   }
 
   & > .contact_me {
-
     display: grid;
     grid-row-gap: 20px;
     width: 70%;
@@ -231,7 +226,6 @@ body {
       &:focus {
         outline: none;
       }
-
     }
 
     textarea {
@@ -239,19 +233,17 @@ body {
       padding: 5px;
     }
 
-   label {
-     text-align: right;
-   }
+    label {
+      text-align: right;
+    }
 
-   button {
-     width: 50%;
-     margin: 0 auto;
-     background: #f3dfc1;
-     color: darken($color: $pink, $amount: 10%);
-   }
-
-
-    
+    button {
+      width: 50%;
+      margin: 0 auto;
+      margin-bottom: 50px;
+      background: #f3dfc1;
+      color: darken($color: $pink, $amount: 10%);
+    }
   }
 }
 
