--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -42,6 +42,8 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: fixed;
+  z-index: 2;
   width: 100%;
   -ms-flex-pack: distribute;
       justify-content: space-around;
