--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -113,6 +113,7 @@ body {
   color: #ff6b6c;
   font-weight: bold;
   padding: 10px;
+  margin-top: 20px;
   border: 1px solid transparent;
   width: 60%;
 }
