--- a/asset/style/style.scss
+++ b/asset/style/style.scss
@@ -107,6 +107,7 @@ body {
         color: $pink;
         font-weight: bold;
         padding: 10px;
+        margin-top: 20px;
         border: 1px solid transparent;
         width: 60%;
       }
