--- a/asset/style/style.scss
+++ b/asset/style/style.scss
@@ -53,6 +53,9 @@ body {
 
     & li {
       margin: 1em;
+      & a {
+        color: darken($color: $pink, $amount: 5%);
+      }
       &:last-child {
         margin-right: 0;
       }
