--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -77,6 +77,29 @@ body {
   min-height: 100vh;
 }
 
+.main-hero-wrapper .bottom-arrow {
+  position: absolute;
+  bottom: 30px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+.main-hero-wrapper .bottom-arrow ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #f6f6f6;
+  margin: 0 auto;
+}
+
 .main-hero-wrapper .hero-content {
   position: absolute;
   top: 50%;
@@ -178,6 +201,7 @@ body {
 .my_works .photos li > .card_description {
   -webkit-box-shadow: 0px 8px 9px 2px rgba(0, 0, 0, 0.3);
           box-shadow: 0px 8px 9px 2px rgba(0, 0, 0, 0.3);
+  padding: 10px;
   padding-bottom: 120px;
   background-color: #ff6b6c;
   color: #f3dfc1;
@@ -193,7 +217,7 @@ body {
 }
 
 .my_works .photos li > .card_description .price {
-  position: relative;
+  position: absolute;
   top: 45px;
   left: 10px;
 }
